--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin",
+  "name": "police-h5",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "zhangjie <hardzj@163.com>",
+  "author": "wangyan <15872403908@163.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,17 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "echarts": "^4.8.0",
-    "element-ui": "^2.13.2",
-    "less": "^3.12.2",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.19",
-    "nprogress": "^0.2.0",
+    "axios": "^0.21.1",
+    "vant": "^2.12.22",
     "vue": "^2.5.2",
-    "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
-    "vue-table-with-tree-grid": "^0.2.4"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
