--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "vant": "^2.12.22",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
